--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 /data
 /brain-tumor-classification
 /chest_xray
+/brain_tumor_dataset
 resnet_pneumonia_model.pt
 resnet_stl_model.pt
 resnet_tumor_model.pt
